# Uri

./: CMakeLists.txt  README.md  notes.md
cmake/: Conan.cmake
include/Uri/: Uri.hpp
src/: .clang-tidy  CharacterInSet.cpp  CharacterInSet.hpp  IsCharacterInSet.cpp  IsCharacterInSet.hpp  PercentEncodedCharacterDecoder.cpp  PercentEncodedCharacterDecoder.hpp  Uri.cpp
test/: CMakeLists.txt
test/src/: UriTests.cpp
